--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,24 @@
   </head>
 
   <body>
+    <header class="row">
+      <div class="col-3">
+        LOGO
+      </div>
+      <div class ="col-4">
+        The best news headlines around!
+      </div>
+      <div class="col-5">
+        <%= link_to 'Add a new story', '#' %>
+        <%= link_to 'About', '#' %>
+      </div>
+
+    </header>
+
+    <br class="clear">
+
+
+
     <%= yield %>
   </body>
 </html>
