--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,17 +12,24 @@
   <body>
     <header class="row">
       <div class="col-3">
-        LOGO
+        <div class ="circle">
+          <br />
+          Welcome
+          <br />
+        </div>
+        
       </div>
-      <div class ="col-4">
+      <div class ="col-4 slogan">
         The best news headlines around!
       </div>
-      <div class="col-5">
+      <div class="col-5 links">
         <%= link_to 'Add a new story', '#' %>
         <%= link_to 'About', '#' %>
       </div>
 
     </header>
+
+    <hr />
 
     <br class="clear">
 
